objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The action desired for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActivationName__c</fullName>
        <description>Name of person who activates this item</description>
        <label>Activation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset that this Order Product was pushed to by Order To Asset</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Product</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset refereced by this line item. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle.</description>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Billing Account)</relationshipLabel>
        <relationshipName>BillingAccountOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentStatus__c</fullName>
        <description>The fulfilment status of this line item. Populated and updated by order management processes for submitted orders.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PONR</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__InCartQuantityMap__c</fullName>
        <description>JSON field calculated by Vlocity with the following structure: {&quot;[childProductId]&quot;: [quantity], ....} that describes the child item quantities that roll-up to the quantity of this item. For example, {&quot;01t0O00000BPrs1QAD&quot;:1,&quot;01t0O00000BPrrwQAD&quot;:1}. The quantity value is the sum of quantities for that product across all instances on the child items. For example, if two child assets exist of type Product A, the first with quantity 2 and the second with quantity 1, the map quantity for Product A should be 3. Helps CPQ identify quantities and enforce cardinality rules. Populated for all items that have direct children, but it is not populated for virtual products or items with no children. Also, child virtual products are not included in the map on their parent item.</description>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is line item editable</description>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProductTrackAgreement__c</fullName>
        <description>Denotes if product is tracked as part of agreement</description>
        <formula>PricebookEntry.Product2.vlocity_ins__TrackAsAgreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Track Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute value data.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId__c</fullName>
        <description>ID of the parent Order Item. Used by Vlocity CPQ to track the hierarchy of items.</description>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_ins__Premises__c</referenceTo>
        <relationshipLabel>Order Line Item</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this item stored as a JSON structure. The JSON records the detailed prices, adjustments and interim calculations which result in the price to the customer.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this item within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>(NOTE: The functionality of this field is replaced by the Action, Sub-Action and Fulfilment Status fields.) The desired provisioning action for the asset identified on this line item. Values include New (add), Active (no change), Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateBandId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Band</label>
        <referenceTo>vlocity_ins__RateBand__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestedChange__c</fullName>
        <label>Requested Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootItemId__c</fullName>
        <description>ID of the ultimate, top-level parent Order Item. Used by Vlocity CPQ to track a full tree of items.</description>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Service Account)</relationshipLabel>
        <relationshipName>ServiceAccountOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubAction__c</fullName>
        <description>The sub-action requested for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThorJeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>